--- a/twitter_sentiment_analysis.ipynb
+++ b/twitter_sentiment_analysis.ipynb
@@ -24,7 +24,7 @@
         "import matplotlib.pyplot as plt\n",
         "import zipfile\n",
         "import seaborn as sns\n",
-        "# from google.colab import files\n",
+        "from google.colab import files\n",
         "from sklearn.model_selection import train_test_split\n",
         "from tensorflow.keras.preprocessing.text import Tokenizer\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
